--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 </head>
 <body>
     <header> AnabeFlix </header>
+  <section>
+    <div>
     <h1> Conheça minha indicação de filme educativo </h1>
     <P>#O Menino do Pijama Listrado</P>
-
+ </div>
+ <div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/9U4NDpUw8dA?si=nI_T9Rr3iK78_qch" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+</section>
 </body>
 </html>
