--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header> AnabeFlix </header>
+    <header> ANABEFLIX </header>
   <section>
     <div>
     <h1> Conheça minha indicação de filme educativo </h1>
