--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header> ANABEFLIX </header>
   <section>
-    <div> class "chamada-texto"
+    <div class "chamada-texto">
     <h1> Conheça minha indicação de filme educativo </h1>
     <P>#O Menino do Pijama Listrado</P>
  </div>
