--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>anabe - flix</title>
@@ -8,7 +11,7 @@
 </head>
 <body>
     <header> ANABEFLIX </header>
-  <section>
+ <section>
     <div class="chamada-texto">
     <h1> Conheça minha indicação de filme educativo </h1>
     <P>#O Menino do Pijama Listrado</P>
