--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/9U4NDpUw8dA?si=nI_T9Rr3iK78_qch" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
          </div>
    </section>
-   
+
+<section>
+<h2> Outras recomendações </h2>
+
+   <div>
+
+
+
+      <a href="https://www.youtube.com/watch?v=SbUVNHdPE4w">
+         <img src="a teoria de tudo.png" alt="">
+
+      </a>
+   </div>
+
+</section>
+ 
 </body>
 </html>
